change computer and result builder
Signed-off-by: Hugo SCHINDLER <hugo.schindler@rte-france.com>